Se implementa validacion de conexion a internet y se ajsuta splash y diseño

--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.SplashScreen">
         <!-- Customize your light theme here. -->
         <item name="windowSplashScreenBackground">#FFFFFF</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/icono_logo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
         <item name="postSplashScreenTheme">@style/Theme.Photograph</item>
     </style>
 
