--- a/app/src/main/res/layout/fragment_main_photographs.xml
+++ b/app/src/main/res/layout/fragment_main_photographs.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,13 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainPhotographs">
 
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/mcv_search_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="8dp"
+        android:layout_margin="16dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +21,12 @@
             android:layout_height="wrap_content"
             android:iconifiedByDefault="false"
             android:textStyle="bold"
-            android:nextFocusUp="@color/black"
+            android:inputType="number"
             android:imeOptions="actionDone|flagNoExtractUi"
             android:queryBackground="@color/transparent"
-            android:queryHint="Busca tu fotografia!"
-            android:searchHintIcon="@null"
-            android:searchIcon="@null" />
+            android:queryHint="Search photography!"
+            android:searchIcon="@drawable/ic_search"
+            android:searchHintIcon="@null" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -57,27 +54,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_photograph"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_favoritos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mcv_search_view"
-        tools:listitem="@layout/photograph_row"/>
+        tools:listitem="@layout/photograph_row" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_favoritos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="300dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Tus Preferidos!"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
         android:src="@drawable/ic_baseline_favorite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
-
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
