--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/mainPhotographs"
         android:name="com.cvelez.photos.ui.MainPhotographs"
-        android:label="Album"
+            android:label="Gallery"
         tools:layout="@layout/fragment_main_photographs">
         <action
             android:id="@+id/action_mainPhotographs_to_details"
