--- a/app/src/main/res/values-night/splash.xml
+++ b/app/src/main/res/values-night/splash.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.SplashScreen">
         <!-- Customize your light theme here. -->
         <item name="windowSplashScreenBackground">#000000</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/icono_logo_dark</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
         <item name="postSplashScreenTheme">@style/Theme.Photograph</item>
     </style>
 
